tests/errors/runtime.NotEnoughArguments.2.res
══╡ Value Error ╞═════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Not enough parameters
  
  Cannot perform:
      map
  
  Required: 
      3

  ┃ File: tests/errors/runtime.NotEnoughArguments.2.art
  ┃ Line: 0
  ┃ 
  ┃    1 ║  print map 1..10 'x